--- a/package.json
+++ b/package.json
@@ -7,11 +7,14 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.1",
+    "bootstrap": "^5.1.3",
+    "framer-motion": "^6.5.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.4.0",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-spring": "^9.5.0",
     "react-transition-group": "^4.4.2",
     "sass": "^1.53.0",
     "styled-components": "^5.3.5",
